# thunderstruck

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml
src/figures/: .gitignore
src/scripts/: .gitignore  Glob-Diags.ipynb  Lapse-Rate.ipynb  Main-Diags.ipynb  Make-Land-Masks.ipynb  Maps.ipynb  Spinup-Diags.ipynb  Vertical-Profiles.ipynb  check_deps.py  common.py  matplotlibrc  paths.py
src/scripts/aux/: Main-Diags.ipynb  Make-Land-Masks.ipynb  Model-Resolution-Table.ipynb  Spinup-Diags.ipynb  Spinup-Lowres.ipynb
