[project]
name = "thunderstruck"
requires-python = ">=3.12"
version = "0.1"

[tool.black]
line-length = 79
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
[tool.ruff]
ignore = ["B023", "B904", "D401"]
line-length = 79
select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "I",   # isort
    "E",   # pycodestyle
    "W",
    "D",   # pydocstyle
    "F",   # pyflakes
    "UP",  # pyupgrade
]
target-version = "py39"


[tool.ruff.isort]
force-sort-within-sections = true


[tool.ruff.pydocstyle]
convention = "numpy"

[tool.pixi.workspace]
name = "thunderstruck"
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
thunderstruck = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.13.3,<3.14"
aeolus = ">=24.11.1.2,<25"
cartopy = ">=0.24.0,<0.25"
ipykernel = ">=6.29.5,<7"
iris = ">=3.12.0,<4"
matplotlib = ">=3.10.1,<4"
numpy = ">=2.2.5,<3"
pandas = ">=2.2.3,<3"
tqdm = ">=4.67.1,<5"
